--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 * Refactor options parsing and execution
-* Create pipeline
+* Create pipeline and add version
 * Push to nuget
 * Create pull request back to forked repo
 * Add file target instead of console target
